Fixed place section column width ad removed space between image and text on small screen devices

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,6 +9,7 @@
   padding-bottom: 24px;
   min-height: 18px;
   max-width: 1184px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
