--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -6,10 +6,6 @@
   transition: opacity 0.5s linear;
 }
 
-.header__link:first-child {
-  padding-right: 18px;
-}
-
 .header__link:hover {
   opacity: 0.8;
 }
