--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,15 +3,11 @@
   font-weight: 400;
   line-height: 1.63;
   color: #fff;
-  margin: 0;
+  margin: 27px 0 0;
 }
 
-.place__paragraph:nth-of-type(2) {
-  margin-top: 27px;
-}
-
-.place__paragraph:last-child {
-  margin-top: 25px;
+.place__paragraph:first-child {
+  margin-top: 0;
 }
 
 @media screen and (max-width: 768px) {
