--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,6 +5,6 @@
 
 @media screen and (max-width: 640px) {
   .place__website {
-    visibility: hidden;
+    display: none;
   }
 }
