--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,7 +9,7 @@
 
 .place {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(2, auto);
   grid-template-areas:
     "title website"
