--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -13,7 +13,6 @@
 
 @media screen and (max-width: 768px) {
   .places {
-    margin: 0 auto;
     max-width: 720px;
   }
 }
